--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ yarn-error.log*
 
 src/firebase.js
 firebase_poc/src/firebase.js
+
+firebase_poc/src/firebase.js
+firebase_poc/src/firebase.js
+firebase_poc/src/firebase.js
