--- a/firebase_poc/firebase.json
+++ b/firebase_poc/firebase.json
@@ -16,6 +16,14 @@
         "destination": "https://www.alphantech.fyi/posts/**"
       },
       {
+        "source": "/about/**",
+        "destination": "https://www.alphantech.fyi/about/**"
+      },
+      {
+        "source": "/home",
+        "destination": "https://www.alphantech.fyi/home/**"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
