--- a/firebase_poc/firebase.json
+++ b/firebase_poc/firebase.json
@@ -12,8 +12,8 @@
         "destination": "https://www.alphantech.fyi/"
       },
       {
-        "source": "/posts/**",
-        "destination": "https://www.alphantech.fyi/posts/**"
+        "source": "/posts/*",
+        "destination": "https://marketing.alphantech.fyi/posts/*"
       },
       {
         "source": "/about/**",
